--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Blog preview card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="keywords" content="HTML, CSS, web development" />
+    <meta name="description" content="some information about HTML and CSS" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Ahmed Mahmoud Abdul-ghaffar" />
+    <title>Frontend Mentor | Blog Preview Card</title>
+    <link href="style.css" rel="stylesheet" />
+    <link href="assets/images/favicon-32x32.png" rel="icon" type="image/png" />
+  </head>
+  <body>
+    <main class="container">
+      <article class="card">
+        <header>
+          <img
+            class="card-img"
+            src="assets/images/illustration-article.svg"
+            alt="Abstract illustration related to HTML and CSS foundations"
+          />
+          <p class="card-publish-date">Puplished 21 Dec 2023</p>
+        </header>
+        <h1 class="card-title" tabindex="0">HTML & CSS foundations</h1>
+        <p class="card-title-description">
+          These languages are the backbone of every website, defining structrue,
+          content, and presentation.
+        </p>
+        <footer class="card-footer">
+          <img
+            class="card-author-img"
+            src="assets/images/image-avatar.webp"
+            alt="Image of the author"
+          />
+          <p class="card-author-name">Greg Hooper</p>
+        </footer>
+      </article>
+    </main>
+  </body>
 </html>
